--- a/index.qmd
+++ b/index.qmd
@@ -3,7 +3,18 @@ title: Discontinuity.jl
 bibliography: files/discontinuitypy.bib
 ---
 
-Notations:
+## Overview
+
+A Julia package for reading and processing discontinuity datasets produced by the [DiscontinuityPy](https://beforerr.github.io/discontinuitypy) Python package.
+
+To install the package, run the following command in the Julia REPL:
+
+```julia
+using Pkg
+Pkg.develop(url="https://github.com/Beforerr/Discontinuity.jl")
+```
+
+## Notations
 
 - $B$ : Magnetic field magnitude
 - $\mathbf{B}_{1, LMN}, \mathbf{B}_{2, LMN}$ : Magnetic field vector in LMN coordinate system before /after the rotation  `B.vec.before` `B.vec.after`
