--- a/docs/src/tutorial.qmd
+++ b/docs/src/tutorial.qmd
@@ -2,7 +2,7 @@ A step-by-step guide to using the package
 
 ```{julia}
 using Speasy
-using Discontinuity: detect_variance, compute_indices
+using Discontinuity: detect_variance
 using Dates
 using DimensionalData
 
@@ -14,12 +14,6 @@ data = get_data("cda/WI_H2_MFI/BGSE", timerange) |> DimArray
 # Now we can detect discontinuities directly from the Speasy variable
 tau = Second(30)
 events = detect_variance(data, tau)
-```
-
-```{julia}
-@b @eval compute_indices(data, tau)
-@profview_allocs compute_indices(data, tau)
-@descend compute_indices(data, tau)
 ```
 
 ```{julia}
